# emojo

./: .gitignore  LICENSE  README.md  pyproject.toml
emoji_suggest/: __init__.py  cli.py  config.py  models.py  suggest.py
emojo/: __init__.py  cli.py  config.py  suggest.py
